# JaxARC

./: pyproject.toml
docs/tutorials/: arcagi3-environments.md  arcagi3_merge_build_plan.md  arcagi3_merge_games_design.md  index.md
examples/: arcagi3_random_agent.py  arcagi3_stoix_adapter.py
scripts/: generate_arcagi3_golden.py
src/jaxarc/arcagi3/: __init__.py  collisions.py  constants.py  engine.py  env.py  rendering.py  types.py  wrappers.py
src/jaxarc/arcagi3/games/: __init__.py  base.py  complex_maze.py  merge.py  simple_maze.py
src/jaxarc/arcagi3/parity/: __init__.py  official_adapter.py  trace_runner.py
test/arcagi3/: conftest.py  golden_common.py  test_engine.py  test_golden.py  test_parity_complex_maze.py  test_parity_merge.py  test_parity_simple_maze.py  test_stoix_compat.py
test/arcagi3/golden/complex_maze/: trace_000_actions.npy  trace_000_frames.npz  trace_000_states.json  trace_001_actions.npy  trace_001_frames.npz  trace_001_states.json
test/arcagi3/golden/merge/: trace_000_actions.npy  trace_000_frames.npz  trace_000_states.json  trace_001_actions.npy  trace_001_frames.npz  trace_001_states.json
test/arcagi3/golden/simple_maze/: trace_000_actions.npy  trace_000_frames.npz  trace_000_states.json  trace_001_actions.npy  trace_001_frames.npz  trace_001_states.json
test/arcagi3/reference/: README.md  complex_maze_reference.py  merge_reference.py  simple_maze_reference.py
