[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "JaxARC"
authors = [{ name = "Aadam", email = "aadimator@gmail.com" }]
description = "High-performance JAX-based ARC environment for RL research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "stoa-env>=0.1.2, <0.2",
  "hydra-core>=1.3.2,<2",
  "loguru>=0.7.3,<0.8",
  "pyprojroot>=0.3.0,<0.4",
  "typer>=0.16.0,<0.17",
  "tqdm>=4.67.1,<5",
  "rich>=14.0.0,<15",
  "drawsvg>=2.4.0,<3",
  "cairosvg>=2.8.2,<3",
  # "jax>=0.6.2,<0.7",
  # "chex>=0.1.89,<0.2",
  "jaxtyping>=0.3.2,<0.4",
  "equinox>=0.13.0,<0.14",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/aadimator/JaxARC"
"Bug Tracker" = "https://github.com/aadimator/JaxARC/issues"
Discussions = "https://github.com/aadimator/JaxARC/discussions"
Changelog = "https://github.com/aadimator/JaxARC/releases"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/jaxarc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxarc"]
# Include Hydra configuration files as package data
include = [
  "src/jaxarc/py.typed",
  "src/jaxarc/conf/**/*.yaml",
  "src/jaxarc/conf/**/*.yml",
  "src/jaxarc/conf/README.md",
]

[tool.hatch.build.targets.sdist]
# Include configs in source distribution too
include = [
  "src/jaxarc/**/*",
  "src/jaxarc/conf/**/*.yaml",
  "src/jaxarc/conf/**/*.yml",
  "src/jaxarc/conf/README.md",
  "test/**/*",
  "docs/**/*",
  "examples/**/*",
]

[tool.hatch.envs.default]
# duplicate for now since hatch doesn't support groups yet
dependencies = []
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:jaxopt.*",
  "ignore:.*unzip2 was deprecated.*:DeprecationWarning",
]
log_cli_level = "INFO"
testpaths = ["test"]
norecursedirs = ["wandb", ".git", ".pixi", "data", "outputs"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "fast: marks tests as fast/unit-level (can be selected with '-m fast')",
]


[tool.coverage]
run.source = ["jaxarc"]
report.exclude_also = ['\.\.\.', 'if typing.TYPE_CHECKING:']

[tool.mypy]
files = ["src", "test"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Vendored third-party parity sources (verbatim upstream copies, test-only,
# never imported at runtime) are not type-checked.
exclude = ['^test/arcagi3/reference/']

[[tool.mypy.overrides]]
module = "jaxarc.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Ignore missing stubs for heavy third-party libs used at runtime
module = [
  "jax",
  "jax.numpy",
  "equinox",
  "jaxtyping",
  "chex",
  "numpy",
  "drawsvg",
  "cairosvg",
  "loguru",
  "rich",
  "rich.*",
  "omegaconf",
  "hydra",
  "hydra_core",
  "stoa",
  "stoa.*",
  # Optional test-only dependency (ARC-AGI-3 parity); not a JaxARC dependency
  # and has no type stubs.
  "arcengine",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pytest is installed into the mypy hook env (additional_dependencies), so mypy
# would follow `import pytest` into pytest's own sources. pytest uses 3.10+
# `match` statements, which fail to parse under python_version = "3.9". Skip
# following into pytest rather than type-checking a third-party lib.
module = ["pytest", "pytest.*", "_pytest.*"]
follow_imports = "skip"
ignore_missing_imports = true


[tool.ruff]
# Vendored third-party sources (verbatim upstream copies) are not linted.
extend-exclude = ["test/arcagi3/reference"]

[tool.ruff.lint]
extend-select = [
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "EXE", # flake8-executable
  "G",   # flake8-logging-format
  "I",   # isort
  "ICN", # flake8-import-conventions
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["jaxarc._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"test/**" = [
  "T20",
  "EM102",
  "PT011",
  "PT017",
  "ARG001",
  "ARG002",
  "ARG005",
  "F841",
  "RUF059",  # unused unpacked fixture values (env, params = maze_env)
  "PLC0415",  # function-local imports are fine in tests
]
"noxfile.py" = ["T20"]
"scripts/**" = ["T20"]  # CLI scripts print progress to stdout
# jaxtyping uses inline shape strings (e.g. Int[Array, "h w"]) which pyflakes
# misreads as forward-reference annotations (F722). Local imports (PLC0415) are
# required in a few spots to break circular imports between engine <-> games and
# to keep rendering lazy. ARG002: Stoa's Environment/Wrapper interface mandates an
# `env_params` argument on space methods even when a game doesn't consult it.
"src/jaxarc/arcagi3/**" = ["F722", "PLC0415", "ARG002"]
"notebooks/**" = [
  "T20",
  "PLC0415",
  "E402",
  "F841",
  "EM102",
  "UP035",
  "UP006",
  "RET504",
  "B018",
  "G004",
  "ARG002",
  "PT028",
  "RUF005",
]
"examples/**" = [
  "T20",
  "PLC0415",
  "E402",
  "F841",
  "EM102",
  "NPY002",
  "G004",
  "EXE001",
  "ARG005",
]
"benchmarks/**" = [
  "T20",
  "PLC0415",
  "E402",
  "F841",
  "EM102",
  "NPY002",
  "G004",
  "EXE001",
  "ARG005",
]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
